# sit_amor_table_memory

./: README.md
sit_armor_injected/: CMakeLists.txt  build.gradle  package.xml  settings.gradle
sit_armor_injected/sitArmorInjected/: build.gradle
sit_armor_injected/sitArmorInjected/src/main/java/it/emarolab/sitArmorInjected/: ConpoundTableEvaluator.java  SITService.java  SitArmorInjectedService.java  TableSITExample.java  tableSITProcessed.owl
sit_armor_injected/sitArmorInjected/src/main/java/it/emarolab/sitArmorInjected/Table/: Legs.java  Pins.java
sit_armor_injected/sitArmorInjected/src/main/java/it/emarolab/sitArmorInjected/owloopDescriptor/: ScoredIndividualDescriptor.java
sit_armor_injected/src/main/resources/: comandi  emptyTableScenario.owl
sit_armor_injected_msgs/: CMakeLists.txt  package.xml
sit_armor_injected_msgs/msg/: Recognition.msg  RecognitionVector.msg  SceneElement.msg  SceneElementVector.msg
sit_armor_injected_msgs/srv/: ArmorSITScene.srv
