<?xml version="1.0"?>
<package>
    <name>sit_armor_injected</name>
    <version>1.0.0</version>
    <description>The aRMOR injected with SIT</description>

    <maintainer email="luca.buoncompagni@edu.unige.it">Buoncompagni Luca</maintainer>
    <author email="luca.buoncompagni@edu.unige.it">Buoncompagni Luca</author>
    <url type="website">https://github.com/EmaroLab/sit_armor_injected</url>
    <license>GPLv2</license>


    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>armor_msgs</build_depend>
    <build_depend>sit_armor_injected_msgs</build_depend>
    <build_depend>rosjava_build_tools</build_depend>
    <build_depend>multi_ontology_reference</build_depend>
    <build_depend>owl_oop</build_depend>
    <build_depend>scene_identification_tagging</build_depend>
    <build_depend>armor</build_depend>

    <run_depend>armor_msgs</run_depend>
    <run_depend>sit_armor_injected_msgs</run_depend>



    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
